# botzone-CSMahjong

./: .gitignore  README.md  代码规范.md
material/: Botzone2020_Mahjong.pptx  国标麻将规则笔记_wr786.md  资料导航.md
project/: CMakeLists.txt  compile.bat  cs_mahjong.cpp  cs_mahjong.h  main_local.cpp  project.vcxproj  project.vcxproj.filters
project/VS_projectfile_tmp/: project.vcxproj  project.vcxproj.filters
project/for local debug/src_/: Majang.cpp  RequestReader.cpp  RequestReader.h  ResponseOutput.cpp  ResponseOutput.h  ScoreCalculator.cpp  ScoreCalculator.h  StateContainer.cpp  StateContainer.h  cs_mahjong.cpp  main.cpp  project.vcxproj
project/src/: Mahjong.cpp  Mahjong.h  Majang.cpp  Majang.h  RequestReader.cpp  RequestReader.h  ResponseOutput.cpp  ResponseOutput.h  ScoreCalculator.cpp  ScoreCalculator.h  ShantenCalculator.h  StateContainer.cpp  StateContainer.h  _generateAM.bat  _quickTest.bat  _quickTuning.bat  cs_mahjong.cpp  g++preprocess.bat  main.am.cpp  main.am2.cpp  main.cpp  project.sln  project.vcxproj.filters  quickTuning.py  specialShanten.txt
project/utils/: test.cpp
project/utils/ChineseOfficialMahjongHelper/Classes/mahjong-algorithm/: fan_calculator.cpp  shanten.cpp  stringify.cpp  tile.h
project/utils/Mahjong-GB-CPP/: README-zh.md  README.md
project/utils/MahjongGB/: MahjongGB.cpp  MahjongGB.h
project/x64/Debug/: project.ilk  vc142.idb
project/x64/Debug/project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  project.lastbuildstate
